Fixing excerpt alignment in slider with text align left and no feature image

--- a/css/components.css
+++ b/css/components.css
@@ -88,25 +88,26 @@
 
     /*---------------------------*/
     /*- SLIDER IMAGES -----------*/
-    
-    .has-image .copy-container{width: 49%; position: relative; top: 50%; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);}
-    .has-image .image-container{width: 49%;}
 
     .image-left .copy-container{float: right;}
     .image-left .image-container{float: left;}
 
     .image-right .copy-container{float: left;}
     .image-right .image-container{float: right;}
+    
+    .has-image .copy-container{width: 49%; position: relative; top: 50%; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);}
+    .has-image .image-container{width: 49%;}
 
-    .has-image.image-top .container{}
     .has-image.image-top .copy-container{clear: both;  margin: auto; text-align: center; top: auto; -webkit-transform: none; -ms-transform: none; transform: none;}
     .has-image.image-top .image-container{clear: both; width: auto; top: auto; -webkit-transform: none; -ms-transform: none; transform: none;}
+
     .image-top .copy-container .excerpt{margin: auto;}
 
     /*---------------------------*/
     /*- SLIDER COPY -------------*/
     .swiper-slide .section-title{margin-bottom: 20px;}
-    .swiper-slide .excerpt{margin-left: auto; margin-right: auto;}
+    .swiper-slide.image-top .excerpt{margin-left: auto; margin-right: auto;}
+    .swiper-slide.text-center .excerpt{margin-left: auto; margin-right: auto;}
 
     /*---------------------------*/
     /*- SLIDER NAVIGATION -------*/
